tests/files/lexer_tests/should_fail/096.cmdr
//Should not parse due to missing rparen
if (true echo hi;